<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:background="@color/white2"
    android:scrollbars="none"
    tools:context=".activityes.InfoActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/ic_back"
            android:padding="@dimen/_6sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/black"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:visibility="invisible"
            android:id="@+id/imageAddMemberGroup"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_add_friend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/black"/>
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:id="@+id/imageProfile"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/background_icon"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:riv_corner_radius="@dimen/_50sdp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:visibility="invisible"
            android:id="@+id/imageChangeImage"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/ic_camera"
            android:padding="@dimen/_6sdp"
            android:tint="@color/black"
            app:layout_constraintEnd_toEndOf="@id/imageProfile"
            app:layout_constraintBottom_toBottomOf="@id/imageProfile"/>

        <TextView
            android:id="@+id/textName"
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <LinearLayout
            android:id="@+id/layout_custom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/textName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_marginLeft="@dimen/_8sdp"
                android:padding="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:id="@+id/buttonBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/background_content_bottom"
                android:paddingTop="@dimen/_8ssp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingBottom="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ic_round"
                    android:layout_margin="@dimen/_5sdp"
                    android:tint="@color/blue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/background"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_4sdp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/buttonNickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/background_content_top"
                android:paddingTop="@dimen/_8ssp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingBottom="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ic_nickname"
                    android:layout_margin="@dimen/_5sdp"
                    android:tint="@color/blue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_4sdp"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_otherAction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/layout_custom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_marginLeft="@dimen/_8sdp"
                android:padding="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_action"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:id="@+id/buttonCreateGroupChat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/background_content_bottom"
                android:paddingTop="@dimen/_8ssp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingBottom="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageCreateGroup"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ic_groups"
                    android:layout_margin="@dimen/_5sdp"
                    android:tint="@color/blue"/>
                <TextView
                    android:id="@+id/textCreateGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_a_chat_group_with"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_4sdp"/>
            </LinearLayout>
<!--            <LinearLayout-->
<!--                android:id="@+id/buttonOutGroup"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:background="@drawable/background_content_bottom"-->
<!--                android:paddingTop="@dimen/_8ssp"-->
<!--                android:paddingLeft="@dimen/_5sdp"-->
<!--                android:paddingBottom="@dimen/_8sdp">-->

<!--                <androidx.appcompat.widget.AppCompatImageView-->
<!--                    android:id="@+id/image"-->
<!--                    android:layout_width="@dimen/_25sdp"-->
<!--                    android:layout_height="@dimen/_25sdp"-->
<!--                    android:layout_marginTop="@dimen/_5sdp"-->
<!--                    android:background="@drawable/ic_out_group"-->
<!--                    android:layout_margin="@dimen/_5sdp"-->
<!--                    android:backgroundTint="@color/error"-->
<!--                    android:tint="@color/blue"/>-->
<!--                <TextView-->
<!--                    android:id="@+id/text"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Rời khỏi nhóm"-->
<!--                    android:textColor="@color/error"-->
<!--                    -->
<!--                    android:textSize="@dimen/_18sdp"-->
<!--                    android:layout_marginTop="@dimen/_4sdp"/>-->
<!--            </LinearLayout>-->
            <LinearLayout
                android:id="@+id/buttonDeleteChat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/background_content_top"
                android:paddingTop="@dimen/_8ssp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingBottom="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageDelete"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ic_delete"
                    android:backgroundTint="@color/error"
                    android:layout_margin="@dimen/_5sdp"
                    android:tint="@color/blue"/>
                <TextView
                    android:id="@+id/textDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_chat"
                    android:textColor="@color/error"
                    android:textSize="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_4sdp"/>
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>